--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <script src="script.js"></script>
+    <h1>Rock, Scissors and Paper!</h1>
+    <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="scissors">Scissors</button>
+        <button id="paper">Paper</button>
+    </div>
+    <div id="display">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <div id="score">
+        <span>Player points: <span id="player-score">0</span></span>
+        <span>Computer points: <span id="computer-score">0</span></span>
+    </div>
+    <span id="congrats-text"></span>
+    <button id="restart">Restart</button>
 </body>
 
 </html>
